[package]
name = "rustpdf"
version = "0.1.0"
authors = ["Avraam Mavridis <avraammauridis@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.1.20"
js-sys = "0.3.6"
wasm-bindgen = "0.2.29"
wasm-bindgen-futures = "0.3.6"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"

[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'SvgElement',
  'HtmlElement',
  'Node',
  'CssStyleSheet',
  'StyleSheet',
  'DomStringList',
  'ShadowRoot',
  'StyleSheetList',
  'CssGroupingRule', 
  'CssRuleList',
  'CssRule',
  'CssFontFaceRule',
  'CssStyleDeclaration',
  'NodeList',
  'XmlSerializer',
  'DomRect',
  'Element',
  'HtmlCollection',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'FileReader'
]
